refactor : 优化json响应体